@@ -3,17 +3,17 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <artifactId>zrlog-plugin-parent</artifactId>
-        <groupId>com.hibegin</groupId>
-        <version>2.1.3</version>
-    </parent>
-
+    <groupId>com.zrlog</groupId>
     <artifactId>plugin-qiniu</artifactId>
-    <version>2.1.3</version>
+    <version>3.0.31</version>
+    <packaging>jar</packaging>
 
     <properties>
-        <outputDirectory>/home/xiaochun/zrlog-plugin/</outputDirectory>
+        <outputDirectory>/Users/xiaochun/plugins/</outputDirectory>
+        <imageName>qiniu</imageName>
+        <native.maven.plugin.version>0.10.2</native.maven.plugin.version>
+        <native.image.mainClass>com.zrlog.plugin.qiniu.Application</native.image.mainClass>
+        <native.image.agentMainClass>com.zrlog.plugin.qiniu.GraalvmAgentApplication</native.image.agentMainClass>
     </properties>
 
 
@@ -21,7 +21,9 @@
         <dependency>
             <groupId>com.hibegin</groupId>
             <artifactId>zrlog-plugin-common</artifactId>
+            <version>3.0.31</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.aliyun/aliyun-java-sdk-cdn -->
         <dependency>
             <groupId>com.qiniu</groupId>
             <artifactId>qiniu-java-sdk</artifactId>
@@ -36,28 +38,61 @@
                 <directory>src/main/resources</directory>
                 <includes>
                     <include>**/*.properties</include>
-                    <include>**/templates/**</include>
                     <include>*.base64</include>
+                    <include>**/templates/**</include>
                 </includes>
             </resource>
         </resources>
         <plugins>
             <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.1.0</version>
+                <executions>
+                    <execution>
+                        <id>java-agent</id>
+                        <goals>
+                            <goal>exec</goal>
+                        </goals>
+                        <configuration>
+                            <executable>java</executable>
+                            <workingDirectory>${project.build.directory}</workingDirectory>
+                            <arguments>
+                                <argument>--enable-preview</argument>
+                                <argument>-classpath</argument>
+                                <classpath/>
+                                <argument>${native.image.agentMainClass}</argument>
+                            </arguments>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>native</id>
+                        <goals>
+                            <goal>exec</goal>
+                        </goals>
+                        <configuration>
+                            <executable>${project.build.directory}/${imageName}</executable>
+                            <workingDirectory>${project.build.directory}</workingDirectory>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.1</version>
                 <configuration>
                     <encoding>UTF-8</encoding>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                 </configuration>
             </plugin>
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
-                <version>2.5.5</version>
+                <version>3.1.0</version>
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>com.zrlog.plugin.qiniu.QiniuPluginApplication</mainClass>
+                            <mainClass>com.zrlog.plugin.qiniu.Application</mainClass>
                         </manifest>
                     </archive>
                     <finalName>qiniu</finalName>
@@ -70,5 +105,71 @@
             </plugin>
         </plugins>
     </build>
+
+    <profiles>
+        <profile>
+            <id>native</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-jar-plugin</artifactId>
+                        <configuration>
+                            <skip>true</skip>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.graalvm.buildtools</groupId>
+                        <artifactId>native-maven-plugin</artifactId>
+                        <version>${native.maven.plugin.version}</version>
+                        <extensions>true</extensions>
+                        <executions>
+                            <execution>
+                                <id>build-native</id>
+                                <goals>
+                                    <goal>compile-no-fork</goal>
+                                </goals>
+                                <phase>package</phase>
+                            </execution>
+                            <execution>
+                                <id>test-native</id>
+                                <goals>
+                                    <goal>test</goal>
+                                </goals>
+                                <phase>test</phase>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <fallback>false</fallback>
+                            <buildArgs>
+                                <arg>
+                                    -Ob
+                                    --enable-sbom
+                                    -H:+BuildReport
+                                    -H:+AddAllCharsets
+                                    -H:+UnlockExperimentalVMOptions
+                                    --initialize-at-build-time=org.apache.commons.logging.LogFactory
+                                    --initialize-at-build-time=org.apache.commons.logging.impl.LogFactoryImpl
+                                    --initialize-at-build-time=com.aliyun.oss.internal.OSSUtils
+                                    --initialize-at-build-time=com.aliyun.oss.ClientBuilderConfiguration
+                                    --initialize-at-build-time=sun.security.krb5.SCDynamicStoreConfig
+                                    --initialize-at-build-time=java.util.ImmutableCollections$ListN
+                                    --trace-class-initialization=sun.security.krb5.SCDynamicStoreConfig
+                                    -H:+UnlockExperimentalVMOptions
+                                    -march=compatibility --enable-preview -H:DashboardDump=${imageName}
+                                    -H:+DashboardAll -H:IncludeResources= --enable-url-protocols=http --enable-url-protocols=https --enable-monitoring=heapdump
+                                </arg>
+                            </buildArgs>
+                            <mainClass>${native.image.mainClass}</mainClass>
+                            <agent>
+                                <enabled>true</enabled>
+                            </agent>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
+
 
 </project>
